<resources>
    <string name="app_name">Golden Monkey</string>
    <string name="y_w">Вы выиграли</string>
    <string name="load">Загрузка</string>
    <string name="check">Проверить</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="fbk">2633039953677953</string>
</resources>